syntax = "proto3";

import "p2p/proto/common.proto";
import "p2p/proto/consensus/consensus.proto";

message PolkaSignature {
    // TODO - add flag (no vote, nil, value?)
    Address validator_address    = 1;
    ConsensusSignature signature = 2;
}

message PolkaCertificate {
    uint64 fork_id = 1;
    uint64 block_number = 2;
    uint32 round = 3;
    Hash block_hash = 4;
    repeated PolkaSignature signatures = 5;
}

message RoundSignature {
    VoteType vote_type = 1;
    Address validator_address = 2;
    ConsensusSignature signature = 3;
    // This is optional since a vote can be NIL.
    optional Hash      block_hash   = 4;
}

message RoundCertificate {
    uint64 fork_id = 1;
    uint64 block_number = 2;
    uint32 round = 3;
    repeated RoundSignature signatures = 4;
}

message LivenessMessage {
    oneof message {
        Vote vote = 1;
        PolkaCertificate polka_certificate = 2;
        RoundCertificate round_certificate = 3;
    }
}
